hermes_fuzz_executed/fuzz_81_execution
'use strict';
let a = Promise.resolve('done');
a.toLowerCase = 'toLowerCase';
a;
function a() {
    return 1 + 2;
}
a;
{
    'use strict';
    let a = Promise.resolve('done');
    a.toLowerCase = 'toLowerCase';
    a;
    let a = new Promise(function(resolve, reject) {
        setTimeout(function() {
            resolve('done');
        }, 500);
    });
    a;
    let a = new Promise(function(resolve, reject) {
        setTimeout(function() {
            resolve('done');
        }, 500);
    });
    a.toLowerCase;
    a;
}
(function() {
    console.log("Hello");
}).then(() => {
    'use strict';
    let a = Promise.resolve('done');
    a.toLowerCase = 'toLowerCase';
    a;
    let a = new Promise(function(resolve, reject) {
        setTimeout(function() {
            resolve('done');
        }, 500);
    });
    a;
    let a = new Promise(function(resolve, reject) {
        setTimeout(function() {
            resolve('done');
        }, 500);
    });
    a.toLowerCase;
    a;
});
 
 
'use strict';
let a = 1 + 2;
a.toLowerCase;
a;
global.a = 1 + 2;
global.a.toLowerCase;
global.a;
a = 1 + 2;
a.toLowerCase = 'toLowerCase';
a;
({
    'use strict';
    let a = 1 + 2;
    a.toLowerCase = 'toLowerCase';
    a;
    let b = 1 + 2;
    b.toLowerCase = 'toLowerCase';
});
{
    'use strict';
    let a

Execution Output ------------------:
test.js:62:17: error: ':' expected in property initialization
    'use strict';
    ~~~~~~~~~~~~^
